<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/popup_bg"
        android:paddingTop="@dimen/padding_default_10"
        android:paddingStart="@dimen/padding_default_10"
        android:paddingEnd="@dimen/padding_default_10"
        android:paddingBottom="@dimen/padding_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/margin_narrow_8">

            <TextView
                android:id="@+id/text_sort_header"
                style="@style/detail_header_text"
                android:layout_margin="5dp"
                android:gravity="left"
                android:text="@string/sort_header" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_time_desc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_time_desc" />
        <TextView
            android:id="@+id/text_time_asc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_time_asc" />
        <TextView
            android:id="@+id/text_title_asc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_title_asc" />
        <TextView
            android:id="@+id/text_title_desc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_title_desc" />
        <TextView
            android:id="@+id/text_rating_desc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_rating_desc" />
        <TextView
            android:id="@+id/text_rating_asc"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/sort_rating_asc" />
        <TextView
            android:id="@+id/text_cancel"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_red_text"
            android:text="@string/bottom_sheet_cancel" />

    </LinearLayout>
</layout>