<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_20"
        android:paddingBottom="@dimen/padding_20"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/dialog_top" />

        <TextView
            android:id="@+id/text_start"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/bottom_sheet_start" />

        <TextView
            android:id="@+id/text_modify"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/bottom_sheet_modify" />

        <TextView
            android:id="@+id/text_delete"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_black_text"
            android:text="@string/bottom_sheet_delete" />

        <TextView
            android:id="@+id/text_cancel"
            android:layout_margin="5dp"
            style="@style/bottom_sheet_red_text"
            android:text="@string/bottom_sheet_cancel" />
    </LinearLayout>
</layout>