<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainVm"
            type="com.hanyeop.presentation.view.MainViewModel" />
        <variable
            name="musicVm"
            type="com.hanyeop.presentation.view.music_list.MusicViewModel" />
        <variable
            name="albumVm"
            type="com.hanyeop.presentation.view.album_list.AlbumViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.setting.SettingFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_default_10"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text"
                style="@style/toolbar_text"
                android:text="@string/setting_text"
                android:textSize="18sp" />
        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/margin_24"
                    android:background="@drawable/setting_top">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/text_music_count_header"
                            android:text="@string/music_count_header"
                            style="@style/setting_header_text"
                            android:textColor="@color/black_high_emphasis"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/text_music_count_body"
                            style="@style/setting_body_text"
                            android:textColor="@color/setting_color"
                            app:itemCount="@{musicVm.musicCount}"
                            tools:text="10"
                            android:gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/text_album_count_header"
                            style="@style/setting_header_text"
                            android:text="@string/music_album_header"
                            android:textColor="@color/black_high_emphasis"
                            android:gravity="center"/>
                        <TextView
                            android:id="@+id/text_album_count_body"
                            style="@style/setting_body_text"
                            android:textColor="@color/setting_color"
                            tools:text="10"
                            app:itemCount="@{albumVm.albumCount}"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_layout_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_header"
                    style="@style/setting_header_text"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_narrow_8"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_layout_type"
                    android:layout_width="match_parent"
                    style="@style/setting_body_text"
                    app:track="@drawable/switch_track_selector"
                    android:thumb="@drawable/switch_thumb"
                    android:paddingStart="@dimen/padding_20"
                    android:background="@color/real_light_gray"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/layout_type" />

                <TextView
                    android:id="@+id/text_data_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_header"
                    android:layout_marginTop="@dimen/margin_16"
                    style="@style/setting_header_text"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_narrow_8"/>

                <TextView
                    android:id="@+id/text_data_back_up"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:background="@color/real_light_gray"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/data_back_up" />

                <TextView
                    android:id="@+id/text_data_restore"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_1"
                    android:background="@color/real_light_gray"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/data_restore" />

                <TextView
                    android:id="@+id/text_data_delete"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin_1"
                    android:background="@color/real_light_gray"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/data_delete" />

                <TextView
                    android:id="@+id/text_security_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_header"
                    android:layout_marginTop="@dimen/margin_16"
                    style="@style/setting_header_text"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_narrow_8"/>

                <TextView
                    android:id="@+id/text_security_setting"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:background="@color/real_light_gray"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/security_setting" />

                <TextView
                    android:id="@+id/text_etc_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/etc_header"
                    android:layout_marginTop="@dimen/margin_16"
                    style="@style/setting_header_text"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginBottom="@dimen/margin_narrow_8"/>

                <TextView
                    android:id="@+id/text_review"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:background="@color/real_light_gray"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/review" />

                <TextView
                    android:id="@+id/text_inquiry"
                    style="@style/setting_body_text"
                    android:layout_width="match_parent"
                    android:background="@color/real_light_gray"
                    android:layout_marginTop="@dimen/margin_1"
                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                    android:paddingStart="@dimen/padding_20"
                    android:paddingTop="@dimen/padding_default_10"
                    android:paddingEnd="@dimen/padding_default_10"
                    android:paddingBottom="@dimen/padding_default_10"
                    android:text="@string/inquiry" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>