<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.hanyeop.presentation.view.music_list.MusicViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_default_10"
        tools:context=".view.music_list.insert.MusicInsertFragment">

        <ImageView
            android:id="@+id/image_music"
            android:layout_width="@dimen/detail_image_size"
            android:layout_height="@dimen/detail_image_size"
            app:detailImage="@{vm.image}"
            android:background="@drawable/rounded_corner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_music">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/music_title"
                android:drawableStart="@drawable/left_image_disc"
                android:drawablePadding="@dimen/padding_default_10"
                android:inputType="text"
                android:text="@={vm.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_artist"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/input_layout_title"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/music_artist"
                android:drawableStart="@drawable/left_image_user"
                android:drawablePadding="@dimen/padding_default_10"
                android:inputType="text"
                android:text="@={vm.artist}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_summary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:layout_constraintStart_toStartOf="@+id/input_layout_artist"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_artist">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/left_image_pen"
                android:drawablePadding="@dimen/padding_default_10"
                android:maxLength="16"
                android:hint="@string/music_summary"
                android:inputType="text"
                android:text="@={vm.summary}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintStart_toStartOf="@+id/input_layout_summary"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_summary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/music_content"
                android:background="@null"
                android:text="@={vm.content}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            style="@style/btn_text"
            android:layout_marginBottom="@dimen/margin_10"
            android:backgroundTint="@color/mainColor"
            android:background="@drawable/button_regular_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_ok"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_text"
            android:text="@string/save"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/button_regular_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>